name:           globber
version:        0.0.1
synopsis:       glob testing in Haskell
build-type:     Simple
cabal-version:  >= 1.8

extra-source-files:
  README.md

library
  exposed-modules:
    Globber
  build-depends:
    base < 5,
    Cabal
  ghc-options: -Wall

test-suite test-globber
  type: exitcode-stdio-1.0
  main-is: TestGlobber.hs
  build-depends:
    base < 5,
    globber,
    hspec,
    Cabal
  ghc-options: -Wall